@@ -11,7 +11,7 @@
       </affiliation>
     </author>
     
-    <PubDate>v2.1 $Date: 2004/02/28 20:47:28 $</PubDate>
+    <PubDate>v2.1 $Date: 2004/04/01 19:59:21 $</PubDate>
     
     <Abstract>
 	<para>	
@@ -5491,8 +5491,9 @@ Feb 10 14:16:03 stats: 125784 questions, 13971 cache entries, 309 negative entri
 	      </para></listitem></varlistentry>
 	  <varlistentry><term>out-of-zone-additional-processing | --out-of-zone-additional-processing=yes | --out-of-zone-additional-processing=no</term>
 	    <listitem><para>
-		Do out of zone additional processing
-	      </para></listitem></varlistentry>
+	      Do out of zone additional processing. This means that if a malicious user adds a '.com' zone to your server, it is not used for 
+	      other domains and will not contaminate answers. Do not enable this setting if you run a public DNS service with untrusted users. Off by default.
+	    </para></listitem></varlistentry>
 	  <varlistentry><term>query-cache-ttl=...</term>
 	    <listitem><para>
 	      Seconds to store queries with an answer in the Query Cache. See <xref linkend="querycache">.
@@ -6135,6 +6136,14 @@ Feb 10 14:16:03 stats: 125784 questions, 13971 cache entries, 309 negative entri
 	      <para>
 		A: There are known issues between gcc &lt;3.2 and PowerDNS on Linux SMP systems. The exact cause is not known but
 		moving to our precompiled version always fixes the problems. If you compile yourself, use a recent gcc!
+	      </para>
+	    </listitem>
+	  </varlistentry>
+	  <varlistentry>
+	    <term>Q: I see this a lot: Backend error: Failed to execute mysql_query, perhaps connection died?</term>
+	    <listitem>
+	      <para>
+		A: Check your MySQL timeout, it may be set too low. This can be changed in the <filename>my.cnf</filename> file.
 	      </para>
 	    </listitem>
 	  </varlistentry>
